force-app/main/default/objects/Collection__c/Collection__c.object-meta.xml
<CustomObject>
    <label>Collection</label>
    <nameField>
        <label>Collection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collection</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>