force-app/main/default/objects/Collection__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Collection</relationshipLabel>
    <relationshipName>Collection</relationshipName>
    <type>Lookup</type>
</CustomField>