force-app/main/default/objects/Collection__c/fields/Collection_Amount_of_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Collection_Amount_of_Invoice__c</fullName>
    <label>Collection Amount of Invoice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>