force-app/main/default/objects/Collection__c/fields/Collection_No__c.field-meta.xml
<CustomField>
    <fullName>Collection_No__c</fullName>
    <displayFormat>COLL/{0000}</displayFormat>
    <label>Collection No.</label>
    <type>AutoNumber</type>
</CustomField>